--- a/be-ci.yml
+++ b/be-ci.yml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   build_and_deploy:
-    runs-on: self-hosted
+    runs-on: self-hosted # replace label of runner if the default label is in correct
 
     steps:
     - name: Checkout code from GitHub
@@ -36,12 +36,17 @@ jobs:
         aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
-
+      
+    # if you already have kubeconfig file, please comment first code block and using second code block\
+    # first code block
     - name: Update kubeconfig for EKS
       run: |
         aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
         kubectl config use-context ${{ env.EKS_CONTEXT }}
-
+    # second code block
+    - name: Update kubeconfig for EKS
+      run: kubectl config use-context ${{ env.EKS_CONTEXT }}
+    
     - name: Build Images
       run: |
         echo "========== Build images Start =========="
