--- a/bff-ci.yml
+++ b/bff-ci.yml
@@ -21,13 +21,23 @@ env:
 
 jobs:
   build_and_deploy:
-    runs-on: self-hosted
+    runs-on: self-hosted # replace label of runner if the default label is in correct
 
     steps:
       - name: Checkout code from GitHub
         uses: actions/checkout@v3
         with:
           ref: ${{ env.GITHUB_BRANCH }}
+
+      # if you already have kubeconfig file, please comment first code block and using second code block\
+      # first code block
+      - name: Update kubeconfig for EKS
+        run: |
+          aws eks update-kubeconfig --name ${{ env.EKS_CLUSTER_NAME }} --region ${{ env.AWS_REGION }}
+          kubectl config use-context ${{ env.EKS_CONTEXT }}
+      # second code block
+      - name: Update kubeconfig for EKS
+        run: kubectl config use-context ${{ env.EKS_CONTEXT }}
 
       - name: Build Images
         run: |
